--- a/styles/dark.less
+++ b/styles/dark.less
@@ -331,67 +331,6 @@ html, body {
                 content: none;
             }
         }
-
-        // &::after {
-        //     width: calc(@code-top-size * 2);
-        //     height: calc(@code-top-size * 2);
-        //     // width: @code-header-size;
-        //     // height: @code-header-size;
-        //     display: inline-block;
-        //     content: '';
-        //     -webkit-mask: url('https://fonts.gstatic.com/s/i/materialicons/expand_less/v10/24px.svg') no-repeat 50% 50%;
-        //     mask: url('https://fonts.gstatic.com/s/i/materialicons/expand_less/v10/24px.svg') no-repeat 50% 50%;
-        //     -webkit-mask-size: cover;
-        //     mask-size: cover;
-        //     background-color: @svg-fill;
-        // }
-    
-
-        // &:not([class$="-"]) {
-        //     padding-top: calc(@code-top-size * 3);
-        //     // padding-top: 18.5px;
-        //     // padding-bottom: calc(@code-language-padding * 2);
-        //     // padding-bottom: 18.5px;
-        // }
-
-
-
-        // &[expandable]::before{
-        //     position: absolute;
-        //     left: 40px;
-        //     top: calc(@code-top-size / 2);
-        //     padding-right: calc(@code-top-size / 5);
-        //     padding-left: calc(@code-top-size / 5);
-        //     opacity: 0.68;
-        //     font-size: .8rem;
-        //     z-index: 3;
-        // }
-
-        // &:not([expandable])::before{
-        //     position: absolute;
-        //     left: 0px;
-        //     top: calc(@code-top-size / 2);
-        //     padding-right: calc(@code-top-size / 5);
-        //     padding-left: calc(@code-top-size / 5);
-        //     opacity: 0.68;
-        //     font-size: .8rem;
-        //     z-index: 3;
-        // }
-
-
-        // &::before {
-        //     position: absolute;
-        //     // right: 0px;
-        //     left: 40px;
-        //     top: calc(@code-top-size / 2);
-        //     content: attr(code-language);
-        //     padding-right: calc(@code-top-size / 5);
-        //     padding-left: calc(@code-top-size / 5);
-        //     // text-align: right;
-        //     opacity: 0.68;
-        //     font-size: .8rem;
-        //     z-index: 3;
-        // }
     }
 
     code {
@@ -405,126 +344,6 @@ html, body {
     
     .token {
         background-color: transparent;
-
-        // // &.class-name > .keyword {
-        // //     color: #46AF99;
-        // // }
-
-        // // .token {
-        // //     tab-size: 1 !important;
-        // // }
-
-        // //  &.arrow {
-
-        // //}
-
-        // &.keyword {
-        //     color: @token-keyword;
-        // }
-
-        // &.comment, &.prolog, &.doctype, &.cdata {
-        //     color: @token-comment;
-        //     font-style: italic;
-        // }
-
-        // &.string {
-        //     color: @token-string;
-        // }
-
-        // &.number {
-        //     color: @token-number;
-        // }
-
-        // &.unit {
-        //     color: @token-number;
-        // }
-
-
-        // &.operator {
-        //     color: #B2B2B2;
-        //     // background-color: transparent;
-        // }
-
-        // &.punctuation {
-        //     color: @token-punctuation;
-        // }
-
-        // &.color {
-        //     color: @token-string;
-        // }
-
-
-        // &.class-name {
-        //     color: @token-class;
-        // }
-        
-        // &.generic.class-name {
-        //     color: #B8D7A3
-        // }
-
-        // &.property-access{
-        //     // color: @token-string;
-        //     color: @token-property;
-        // }
-
-        // &.method, &.function {
-        //     // @token-method: #DD4A68;
-        //     // color: @token-method;
-        //     color: #D3FA7E;
-        // }
-        
-
-        // // &.function {
-        // //     color: #46AF99;
-        // // }
-
-        // // &.variable {
-        // //     color: #4EC9B0;
-        // // }
-
-
-        // //  &.keyword, 
-        // // &.control-flow {
-        // //     @token-controlflow: #DD4A68;
-        // //     color: @token-controlflow;
-        // // }
-
-
-
-        // // &.dom {
-        // //     @token-dom: #e90;
-        // //     color: @token-dom;
-        // // }
-
-     
-        // &.property {
-        //     color: @token-property;
-        // }
-
-        // &.selector {
-        //     color: @token-selector;
-        // }
-
-        // &.boolean {
-        //     color: @token-boolean;
-        // }
-
-
-        // &.attr-name {
-        //     color: @token-attrname;
-        // }
-
-        // &.attr-value {
-        //     color: @token-attrvalue;
-        // }
-
-
-        // // &.url {
-        // //   color: @token-keyword;
-        // // }
-
-     
-
     }
 
     /*#endregion Code Tags */
@@ -710,30 +529,6 @@ html body[for="html-export"]:not([data-presentation-mode]) {
 
 
 
-// html body[for="html-export"][data-presentation-mode] {
-
-//     // .markdown-preview.markdown-preview code[class*="language-"], 
-//     // .markdown-preview.markdown-preview pre[class*="language-"] {
-
-//     //     background-color: red !important;
-
-//     // }
-
-//     code[class*="language-"], pre[class*="language-"] {
-//         font-weight: normal;
-//         // background-color: red;
-//     }
-
-//     // .markdown-preview.markdown-preview pre {
-//     //     // font-weight: 300;
-//     //     // box-shadow: unset;
-//     //     background-color: red;
-//     // }
-// }
-
-
-
-
 /*#region Custom Classes */
 
 
@@ -783,34 +578,7 @@ html body[for="html-export"]:not([data-presentation-mode]) {
         z-index: 3;
         left: 40px;
     }
-
-    // &[expandable]::before {
-    //     position: absolute;
-    //     left: 40px;
-    //     top: calc(@code-top-size / 2);
-    //     content: attr(code-language);
-    //     padding-right: calc(@code-top-size / 5);
-    //     padding-left: calc(@code-top-size / 5);
-    //     opacity: 0.68;
-    //     font-size: .8rem;
-    //     z-index: 3;
-    // }
-
-    // &:not([expandable])::before{
-    //     position: absolute;
-    //     left: 0px;
-    //     top: calc(@code-top-size / 2);
-    //     content: attr(code-language);
-    //     padding-right: calc(@code-top-size / 5);
-    //     padding-left: calc(@code-top-size / 5);
-    //     opacity: 0.68;
-    //     font-size: .8rem;
-    //     z-index: 3;
-    // }
-
 }
-
-
 
 
 /*#endregion Custom Classes */
@@ -870,12 +638,11 @@ html body[for="html-export"]:not([data-presentation-mode]) {
 
 
 
+
 /*region Mermaid Diagram */
 
+
 /*region Mermaid Diagram - Class Diagram */
-
-/*endregion Mermaid Diagram - Class Diagram */
-
 
 
 // .classGroup {
@@ -902,11 +669,6 @@ html body[for="html-export"]:not([data-presentation-mode]) {
 
 //     transform: translate(0px, 2%);
 // }
-
-
-
-
-
 
 
 g.classGroup text {
@@ -980,6 +742,9 @@ g.classGroup line{
 //     // fill: @general-font-color !important;
 //     fill: red !important;
 // }
+
+
+/*endregion Mermaid Diagram - Class Diagram */
 
 
 
@@ -1063,9 +828,6 @@ g.classGroup line{
 /*endregion Mermaid Diagram */
 
 
-
-
-
 .slide {
     top: 0px;
     height: 100%;
@@ -1088,6 +850,19 @@ g.classGroup line{
         }
 
     }
+
+    hr {
+        height: 0px !important;
+    }
+
+    pre {
+        text-shadow: none;
+        width: inherit;
+
+        // margin: .5em 0;
+    }
+
+  
 }
 
 
