--- a/styles/dark.less
+++ b/styles/dark.less
@@ -7,6 +7,7 @@
 @link-hover-color:   #40E0D0;
 
 /*#region Code Block Palette */
+@code-max-block-height: 400px;
 @code-border-color:     #3F3E3E;
 @code-text-color:       #D1D1D1;
 @code-top-size:         .8rem;
@@ -104,16 +105,6 @@ html, body {
     background-color: @background-general;
 }
 
-// // Paragraphs
-// .markdown-preview.markdown-preview {
-//     p {
-//         font-size: @general-font-size;
-//         margin-block-start: 0em;
-//         margin-block-end: 0em;
-//         color: @general-font-color;
-//     }
-// }
-
 // Paragraphs
 .markdown-preview.markdown-preview p {
     font-size: @general-font-size;
@@ -122,23 +113,15 @@ html, body {
     color: @general-font-color;
 }
 
+// Code tag links
 .markdown-preview.markdown-preview a code {
     color: #08c !important;
 }
-
 
 // Strong
 .markdown-preview.markdown-preview strong {
     color: inherit;
 }
-
-
-// // Strong
-// .markdown-preview.markdown-preview {
-//     strong {
-//         color: inherit;
-//     }
-// }
 
 
 // Header Tags
@@ -306,140 +289,6 @@ html, body {
         background-color: @divider-color;
     }
 }
-
-// // Code Tags
-// .markdown-preview.markdown-preview {
-//     pre {
-//         font-size: @general-font-size !important;
-//         background-color: @background-body;
-//         color: @general-font-color;
-//         position: relative;
-//         // border: thin solid @code-border-color;
-//         max-height: 500px;
-//         // overflow-y: auto;
-//         overflow-y: auto;
-//         // overflow-y: hidden;
-
-//         // padding-bottom: 0px;
-//         margin-top: 5px;
-
-//         margin-bottom: 0px;
-     
-//         // transition: overflow-y 1s 0.5s;
-
-        
-      
-
-//         &[code-collapsed=true] {
-//             max-height: calc(@code-top-size * 2.5);
-//             overflow-y: hidden;
-//             padding-top: 0px;
-//             padding-bottom: 0px;
-//             margin-top: 0px;
-//             margin-bottom: 0px;
-//             transition: all 0.15s cubic-bezier(0.22, 0.61, 0.36, 1);
-
-//             visibility: hidden;
-
-//             // & > *:not(button) {
-//             //     visibility: hidden;
-//             //     transition: all 0.6s;
-//             // }
-//         }
-        
-//         &:not([code-collapsed=true]) {
-//             padding-top: calc(@code-top-size * 3);
-//             transition: all 0.5s;
-//             visibility: visible;
-
-//             animation: hide-scroll 0.5s backwards;
-//             @keyframes hide-scroll {
-//                 from, to { overflow: hidden; } 
-//             }
-
-//             &::-webkit-scrollbar-thumb {
-//                 // border-radius: 5px;
-//                 background-color: rgba(119, 118, 118, 0.493);
-//                 border: 4px solid rgba(119, 118, 118, 0.493);
-//                 background-clip: content-box;
-
-//                 &:hover {
-//                     background-color: rgba(150,150,150,0.66);
-//                     border: 4px solid rgba(150,150,150,0.66);
-//                     transition: all 1s;
-//                 }
-//             }
-
-//             &::-webkit-scrollbar-track {
-//                 // border-radius: 10px;
-//                 background-color: transparent;
-//                 // background-color: red;
-
-//                 &:vertical {
-//                     margin-top: calc(@code-top-size * 2);
-//                 }
-
-//             }
-
-//             &::-webkit-scrollbar {
-//                 width: 8px;
-//                 height: 8px;
-//             }
-
-//             ::-webkit-scrollbar-button {
-//                 width: 0;
-//                 height: 0;
-//                 display: none;
-//             }
-
-//             ::-webkit-scrollbar-corner {
-//                 background-color: transparent;
-//             }
-//         }
-
-//         & > span {
-//             font-size: @general-font-size !important;
-//             letter-spacing: 0px;
-//             color: @general-font-color;
-//         }
-
-//         & > code {
-//             font-size: @general-font-size !important;
-//             letter-spacing: 0px;
-//             color: @general-font-color;
-//         }
-
-//         & .line-numbers-rows {
-//             top: calc(@code-top-size * 3);
-//         }
-
-
-//         &[data-line] .line-highlight {
-//             background: @code-highlight-color;
-//             margin-top: calc(@code-top-size * 3);
-
-
-//             &[data-end]:after {
-//                 content: none;
-//             }
-
-//             &:before {
-//                 content: none;
-//             }
-//         }
-//     }
-
-//     code {
-//         font-size: @general-font-size !important;
-//         color: @code-text-color;
-//         background-color: @background-body;
-//         letter-spacing: 0px;
-//     }
-    
-//     .token {
-//         background-color: transparent;
-//     }
-// }
 
 /*#endregion Markdown Body */
 
@@ -958,14 +807,17 @@ pre[data-role="codeBlock"] {
     background-color: @background-body;
     color: @general-font-color;
     position: relative;
-    max-height: 500px;
-    overflow-y: auto;
+    // max-height: 500px;
+    max-height: @code-max-block-height;
+    // overflow-y: auto;
+    overflow: auto;
     margin-top: 5px;
     margin-bottom: 0px;
 
     &[code-collapsed=true] {
         max-height: calc(@code-top-size * 2.5);
-        overflow-y: hidden;
+        // overflow-y: hidden;
+        overflow: hidden;
         padding-top: 0px;
         padding-bottom: 0px;
         margin-top: 0px;
