--- a/styles/style.less
+++ b/styles/style.less
@@ -1,3 +1,14 @@
+/*  Theme Options
+        dark
+        light
+
+    Usage:
+        @theme: dark; 
+        .theme(@theme);
+        @import "https://raw.githubusercontent.com/BrxndxnP/Markdown-Preview-Extensions/main/styles/style.less";
+
+*/
+
 @import "themes.less";
 
 html,
