Updated master styles and parser files

--- a/style.less
+++ b/style.less
@@ -1,13 +1,14 @@
-/*  Themes
+/*  Theme Options
+        dark
+        light
 
-Dark Theme
-@import "https://raw.githubusercontent.com/BrxndxnP/Markdown-Preview-Extensions/main/styles/dark.less";
-
-Light Theme
-@import "https://raw.githubusercontent.com/BrxndxnP/Markdown-Preview-Extensions/main/styles/light.less";
+    Usage:
+        @theme: dark; 
+        .theme(@theme);
+        @import "https://raw.githubusercontent.com/BrxndxnP/Markdown-Preview-Extensions/main/styles/style.less";
 
 */
 
-
-// @import "https://raw.githubusercontent.com/BrxndxnP/Markdown-Preview-Extensions/main/styles/dark.less";
-@import "https://raw.githubusercontent.com/BrxndxnP/Markdown-Preview-Extensions/main/styles/light.less";
+@theme: dark; 
+.theme(@theme);
+@import "https://raw.githubusercontent.com/BrxndxnP/Markdown-Preview-Extensions/main/styles/style.less";
