--- a/styles/themes.less
+++ b/styles/themes.less
@@ -3,6 +3,8 @@
     font-family: Roboto;
     src: url("https://fonts.googleapis.com/css?family=Roboto");
   }
+  @link-return-icon: "↩︎";
+  @link-color: #08c;
   @background-body: #161616;
   @background-general: #292929;
   @general-font-color: #d4d4d4;
@@ -87,6 +89,8 @@
     font-family: Roboto;
     src: url("https://fonts.googleapis.com/css?family=Roboto");
   }
+  @link-return-icon: "↩︎";
+  @link-color: #08c;
   @font-color: #d3d3d3;
   @background-body: #f5f5f5;
   @background-general: #ffffff;
@@ -166,3 +170,5 @@
   @h5-color: lighten(@header-font-color, 40%);
   @h6-color: lighten(@header-font-color, 45%);
 }
+
+@icon-arrow_drop_up: "https://fonts.gstatic.com/s/i/materialiconsoutlined/arrow_drop_up/v10/24px.svg";
