Added elements to parser.js

--- a/styles/style.less
+++ b/styles/style.less
@@ -1133,3 +1133,10 @@ pre[data-role="codeBlock"][class~="language-yaml"] {
   //   transition: .25s;
   // }
 }
+
+.block-center {
+  & * {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
